fix: resolve compilation warnings
- Remove unused networkTooltip field from AnibusController
- Remove unused DateTimeFormatter import from InfoCardManager
- Replace deprecated URL constructor with URI.create().toURL() in NetworkStatusMonitor